[gd_scene load_steps=17 format=2]

[ext_resource path="res://Data/BaseMenu.gd" type="Script" id=1]
[ext_resource path="res://res/d9464-arkhip_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://res/creat/1/walk/2.png" type="Texture" id=3]
[ext_resource path="res://res/background3.png" type="Texture" id=4]
[ext_resource path="res://res/War4.png" type="Texture" id=5]
[ext_resource path="res://res/creat/Mage/mage.png" type="Texture" id=6]
[ext_resource path="res://res/creat/2/move/29_20220320194918.png" type="Texture" id=7]
[ext_resource path="res://res/AC6sD6GnnYs1.jpg" type="Texture" id=8]
[ext_resource path="res://res/creat/Knight/knight.png" type="Texture" id=9]
[ext_resource path="res://res/creat/dragon/Walk1.png" type="Texture" id=10]
[ext_resource path="res://res/creat/Robot1/02_Turn_to_walk/Turn_to_walk_000.png" type="Texture" id=11]
[ext_resource path="res://res/creat/Rogue/rogue.png" type="Texture" id=12]
[ext_resource path="res://res/creat/jinn_animation/Flight4.png" type="Texture" id=13]
[ext_resource path="res://res/Battleground2.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="BaseMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BaseM" type="ColorRect" parent="."]
margin_right = 1923.0
margin_bottom = 1074.0

[node name="TextureRect4" type="TextureRect" parent="BaseM"]
margin_right = 1924.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="BaseM"]
margin_left = 3.0
margin_top = 181.0
margin_right = 1923.0
margin_bottom = 809.0
texture = ExtResource( 14 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="BaseM"]
margin_left = 2.0
margin_top = -111.0
margin_right = 1923.0
margin_bottom = 553.0
texture = ExtResource( 4 )
expand = true

[node name="TextureRect" type="TextureRect" parent="BaseM"]
margin_top = -3.0
margin_right = 1924.0
margin_bottom = 292.0
texture = ExtResource( 8 )
expand = true

[node name="TextureRect5" type="TextureRect" parent="BaseM"]
margin_left = -126.0
margin_top = -95.0
margin_right = 258.0
margin_bottom = 289.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="BaseM"]
margin_left = 1600.0
margin_top = -58.0
margin_right = 2043.0
margin_bottom = 385.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect7" type="TextureRect" parent="BaseM"]
margin_left = -35.0
margin_top = 231.0
margin_right = 302.0
margin_bottom = 568.0
texture = ExtResource( 13 )
expand = true

[node name="TextureRect8" type="TextureRect" parent="BaseM"]
margin_left = 1572.0
margin_top = 175.0
margin_right = 1984.0
margin_bottom = 587.0
texture = ExtResource( 9 )
expand = true
flip_h = true

[node name="TextureRect9" type="TextureRect" parent="BaseM"]
margin_left = -282.0
margin_top = 237.0
margin_right = 402.0
margin_bottom = 921.0
texture = ExtResource( 10 )
expand = true

[node name="TextureRect10" type="TextureRect" parent="BaseM"]
margin_left = 1564.0
margin_top = 390.0
margin_right = 1977.0
margin_bottom = 803.0
texture = ExtResource( 6 )
expand = true
flip_h = true

[node name="TextureRect11" type="TextureRect" parent="BaseM"]
margin_left = -1.0
margin_top = 818.0
margin_right = 231.0
margin_bottom = 1070.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect12" type="TextureRect" parent="BaseM"]
margin_left = 1562.0
margin_top = 674.0
margin_right = 1998.0
margin_bottom = 1110.0
texture = ExtResource( 12 )
expand = true
flip_h = true

[node name="Money" type="Label" parent="BaseM"]
margin_left = 1351.0
margin_top = 7.0
margin_right = 1893.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.847059, 0.898039, 0.152941, 1 )
custom_fonts/font = SubResource( 3 )

[node name="L1" type="Button" parent="BaseM"]
margin_left = 305.0
margin_top = 108.0
margin_right = 455.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="L2" type="Button" parent="BaseM"]
margin_left = 690.0
margin_top = 108.0
margin_right = 840.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="L3" type="Button" parent="BaseM"]
margin_left = 1064.0
margin_top = 108.0
margin_right = 1214.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="L4" type="Button" parent="BaseM"]
margin_left = 1506.0
margin_top = 108.0
margin_right = 1656.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="L5" type="Button" parent="BaseM"]
margin_left = 305.0
margin_top = 370.0
margin_right = 455.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="L6" type="Button" parent="BaseM"]
margin_left = 690.0
margin_top = 370.0
margin_right = 840.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="L7" type="Button" parent="BaseM"]
margin_left = 1064.0
margin_top = 370.0
margin_right = 1214.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 1 )
text = "7"

[node name="L8" type="Button" parent="BaseM"]
margin_left = 1506.0
margin_top = 370.0
margin_right = 1656.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 1 )
text = "8"

[node name="L9" type="Button" parent="BaseM"]
margin_left = 305.0
margin_top = 586.0
margin_right = 455.0
margin_bottom = 721.0
custom_fonts/font = SubResource( 1 )
text = "9"

[node name="L10" type="Button" parent="BaseM"]
margin_left = 690.0
margin_top = 580.0
margin_right = 840.0
margin_bottom = 715.0
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="L11" type="Button" parent="BaseM"]
margin_left = 1064.0
margin_top = 580.0
margin_right = 1214.0
margin_bottom = 715.0
custom_fonts/font = SubResource( 1 )
text = "11"

[node name="L12" type="Button" parent="BaseM"]
margin_left = 1506.0
margin_top = 584.0
margin_right = 1656.0
margin_bottom = 719.0
custom_fonts/font = SubResource( 1 )
text = "12"

[node name="L13" type="Button" parent="BaseM"]
margin_left = 305.0
margin_top = 878.0
margin_right = 455.0
margin_bottom = 1013.0
custom_fonts/font = SubResource( 1 )
text = "13"

[node name="L14" type="Button" parent="BaseM"]
margin_left = 690.0
margin_top = 872.0
margin_right = 840.0
margin_bottom = 1007.0
custom_fonts/font = SubResource( 1 )
text = "14"

[node name="L15" type="Button" parent="BaseM"]
margin_left = 1064.0
margin_top = 870.0
margin_right = 1214.0
margin_bottom = 1005.0
custom_fonts/font = SubResource( 1 )
text = "15"

[node name="L16" type="Button" parent="BaseM"]
margin_left = 1506.0
margin_top = 868.0
margin_right = 1656.0
margin_bottom = 1003.0
custom_fonts/font = SubResource( 1 )
text = "16"

[node name="Back" type="Button" parent="BaseM"]
margin_left = 859.0
margin_top = -2.0
margin_right = 983.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Beast" type="Button" parent="BaseM"]
margin_left = 523.0
margin_right = 668.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "Beast"

[node name="Base" type="Button" parent="BaseM"]
margin_left = 1218.0
margin_top = -1.0
margin_right = 1339.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Base"

[connection signal="pressed" from="BaseM/L1" to="." method="_on_L1_pressed"]
[connection signal="pressed" from="BaseM/L2" to="." method="_on_L2_pressed"]
[connection signal="pressed" from="BaseM/L3" to="." method="_on_L3_pressed"]
[connection signal="pressed" from="BaseM/L4" to="." method="_on_L4_pressed"]
[connection signal="pressed" from="BaseM/L5" to="." method="_on_L5_pressed"]
[connection signal="pressed" from="BaseM/L6" to="." method="_on_L6_pressed"]
[connection signal="pressed" from="BaseM/L7" to="." method="_on_L7_pressed"]
[connection signal="pressed" from="BaseM/L8" to="." method="_on_L8_pressed"]
[connection signal="pressed" from="BaseM/L9" to="." method="_on_L9_pressed"]
[connection signal="pressed" from="BaseM/L10" to="." method="_on_L10_pressed"]
[connection signal="pressed" from="BaseM/L11" to="." method="_on_L11_pressed"]
[connection signal="pressed" from="BaseM/L12" to="." method="_on_L12_pressed"]
[connection signal="pressed" from="BaseM/L13" to="." method="_on_L13_pressed"]
[connection signal="pressed" from="BaseM/L14" to="." method="_on_L14_pressed"]
[connection signal="pressed" from="BaseM/L15" to="." method="_on_L15_pressed"]
[connection signal="pressed" from="BaseM/L16" to="." method="_on_L16_pressed"]
[connection signal="pressed" from="BaseM/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="BaseM/Beast" to="." method="_on_BEAST_pressed"]
[connection signal="pressed" from="BaseM/Base" to="." method="_on_BASE_pressed"]
